--- a/src/Pages/Visitor/Components/Home/index.css
+++ b/src/Pages/Visitor/Components/Home/index.css
@@ -10,10 +10,14 @@
     
     text-align: center;
 }
+.Home>div>div{
+    width: 40vw;
+    margin-top: 10vh;
+}
 .Home>div>img{
     width: 40vw;
 }
-.Home>div>a{
+.Home>div>div>a{
     color: #00ffff;
     padding: 1vw;
     border: 1px #00ffff solid;
@@ -22,7 +26,7 @@
     width: 10vw;
     transition: all 0.3s ease;
 }
-.Home>div>a:hover{
+.Home>div>div>a:hover{
     color: white;
     padding: 1vw;
     border: 1px #00ffff98 solid;
