--- a/src/Pages/Scientific/Components/Article/index.css
+++ b/src/Pages/Scientific/Components/Article/index.css
@@ -14,7 +14,7 @@
     align-items: center; */
     text-align: center;
     color: white;
-    background-color: rgba(17, 17, 17, 0.418);
+    /* background-color: rgba(17, 17, 17, 0.418); */
     border-radius: 15px;
 }
 .ArticleContainerBody{
@@ -71,4 +71,17 @@
 }
 .ArticleInfoRatings>div{
     padding: 5vw;
+}
+
+.ArticleInfoContainer{
+    overflow: hidden;
+}
+.ArticleInfoContainer > a{
+    color: rgb(255, 255, 255);
+}
+.ArticleInfo{
+    width: 40vw;
+    height: 3vh;
+    padding: 1vw;
+    /* background-color: rgb(46, 46, 46); */
 }
