--- a/src/Pages/Scientific/Components/Journal/index.css
+++ b/src/Pages/Scientific/Components/Journal/index.css
@@ -16,7 +16,7 @@
 
 .JournalContainer > div{
     display: flex;
-    background-color: rgb(59, 70, 122);
+    background-color: rgba(0, 0, 0, 0.322);
     width: 70vw;
     height: 30vh;
     border-radius: 15px;
@@ -36,7 +36,7 @@
     text-decoration: none;
     padding: 1vw;
     border-radius: 10px;
-    background-color: rgb(133, 91, 37);
+    background-color: rgb(45, 133, 37);
     margin-top: 1vh;
 }
 .Journal>img{
