--- a/src/Pages/Signup/index.css
+++ b/src/Pages/Signup/index.css
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: center;
 }
+.AuthLeft>img{
+    width: 25vw;
+}
 .AuthRight{
     border-left: 1px solid rgb(145, 145, 145);
 }
@@ -46,6 +49,7 @@
     border: 1px solid rgb(145, 145, 145);
     margin: 1vw;
     padding: 1vw;
+    color: white;
 }
 .AuthRightCred{
     width: 40vw;
@@ -63,6 +67,7 @@
     border: 1px solid rgb(145, 145, 145);
     margin: 1vw;
     padding: 1vw;
+    color: white;
 }
 .AuthRightLast{
     width: 40vw;
@@ -79,6 +84,7 @@
     border: 1px solid rgb(145, 145, 145);
     margin: 1vw;
     padding: 1vw;
+    color: white;
 }
 .AuthRightSubmit{
     width: 40vw;
